--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.21",
     "@types/react-dom": "^17.0.9",
+    "inversify": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "reflect-metadata": "^0.1.13",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^1.1.2"
   },
