--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "inversify": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "reflect-metadata": "^0.1.13",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.19",
+    "@types/react-modal": "^3.13.1",
     "typescript": "^4.4.2"
   }
 }
