--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "reflect-metadata": "^0.1.13",
+    "sass": "^1.49.7",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^1.1.2"
   },
