--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "@types/react": "^17.0.19",
     "@types/react-modal": "^3.13.1",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
