--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,10 @@
       "reflect-metadata"
     ],
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+	"plugins": [
+		{ "name": "typescript-plugin-css-modules" }
+	]
   },
   "include": [
     "src"
