--- a/.github/workflows/azure-ci-cd.yml
+++ b/.github/workflows/azure-ci-cd.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-    environment: prod
+    environment: production
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
