fix DockerFile path in azure-ci-cd.yml

--- a/.github/workflows/azure-ci-cd.yml
+++ b/.github/workflows/azure-ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./
-          file: ./Dockerfile
+          file: ./nginx/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.USERNAME }}/${{ env.PROJECT_NAME }}:${{ github.sha }}
