--- a/.github/workflows/azure-ci-cd.yml
+++ b/.github/workflows/azure-ci-cd.yml
@@ -34,6 +34,8 @@ jobs:
           context: ./
           file: ./nginx/Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
+          build-args: |
+            SOCKET_URL=${{ secrets.SOCKET_URL }}
           push: true
           tags: ${{ env.USERNAME }}/${{ env.PROJECT_NAME }}:${{ github.sha }}
           cache-from: type=registry,ref=${{ env.USERNAME }}/${{ env.PROJECT_NAME }}:buildcache
