--- a/.github/workflows/azure-ci-cd.yml
+++ b/.github/workflows/azure-ci-cd.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Check SOCKET_URL
+        run: echo ${{ secrets.SOCKET_URL }}!
+
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v3
