--- a/.github/workflows/build-and-tag.yml
+++ b/.github/workflows/build-and-tag.yml
@@ -1,12 +1,9 @@
-#1) Build and push image to Dockerhub
-#2) Bump release version
-#3) Deploy to Azure Web App 
-
-name: CI-CD
+name: Build and Tag
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   workflow_dispatch:
 
 env:
@@ -56,20 +53,4 @@ jobs:
         with:
           release-type: node
           package-name: release-please-action
-  
-  deploy:
-    runs-on: ubuntu-latest
-    needs: auto-tag
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-    steps:
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'react-chess'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'index.docker.io/barkin94/react-chess:${{ github.sha }}'
